# aliens-invasion-cpp

./: .gitignore  CMakeLists.txt  README.md
include/aliens-invasion/: aliens-invasion.h
src/: CMakeLists.txt
src/aliens-invasion-app/: main.cpp
src/aliens-invasion-lib/: alien.h  aliens-invasion-interfaces.h  aliens-manager.cpp  aliens-manager.h  city.cpp  city.h  map-manager.cpp  map-manager.h  parse-utils.h
